thêm trang chi tiết người bán

--- a/assets/css/chiTietSanPham.css
+++ b/assets/css/chiTietSanPham.css
@@ -660,6 +660,11 @@
 .nut-xem-nguoi-ban {
     display: flex;
     gap: 10px;
+    
+}
+.nut-xem-nguoi-ban a,
+.chat-voi-nguoi-ban a {
+    text-decoration: none !important;
 }
 
 .nut-xem-nguoi-ban button {
@@ -672,6 +677,7 @@
     display: flex;
     align-items: center;
     gap: 5px;
+    
 }
 
 /* Nút Xem cửa hàng: Viền hồng, nền trắng */
@@ -679,6 +685,7 @@
     background: white;
     border: 1px solid var(--bs-pink-400);
     color: var(--bs-pink-500);
+    
 }
 
 .nut-xem-nguoi-ban a:first-child button:hover {
